# actiontests

./: .travis.yml  Makefile.am  README.md  configure.ac
.github/actions/get_status/: action.yml
.github/actions/safe_build/: action.yml
.github/workflows/: actionstest.yml  get_status.yml  unicode.yml
config/: Makefile.am  textcat_alt.cfg.in
m4/: Makefile.am  ac_check_openmp.m4
src/: Makefile.am  fork.cxx  main.cxx  tst.sh  unicode.cxx
